--- a/views/index.html
+++ b/views/index.html
@@ -19,15 +19,15 @@
       <div class="main-container">
 
         <div class="inner cover">
-          <span class="glyphicon glyphicon-link"></span>
-          <h1>URL Shortener</h1>
-          <h4>coligo.io</h4>
+          <!--<span class="glyphicon glyphicon-link"></span>-->
+          <h1>Node URL Shortener API</h1>
+
 
           <div class="row">
 
             <div class="col-lg-12">
               <div class="input-group input-group-lg">
-                <input id="url-field" type="text" class="form-control" placeholder="Paste a link...">
+                <input id="url-field" type="text" class="form-control" placeholder="Paste url link here...">
                 <span class="input-group-btn">
                   <button class="btn btn-shorten" type="button">SHORTEN</button>
                 </span>
